src/objects/Coffee_GAPs_Adoption__c.object
<CustomObject>
    <fields>
        <fullName>Ability_to_Detect_Pest_Disease__c</fullName>
        <label>GAP 8.1 Ability to Detect Pest &amp; Disease</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_of_Fertilizer_per_Plant__c</fullName>
        <label>GAP 1.3 Amount of Fertilizer per Plant</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>50 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>185 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_of_Herbicide_Used__c</fullName>
        <label>GAP 7.6 Amount of Herbicide Used</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>150ml in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200mls in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75mls in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_of_Manure_per_Tree__c</fullName>
        <label>GAP 1.4 Amount of Manure per Tree</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>One basin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two basins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three basins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 basins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CKW_Contact_Id__c</fullName>
        <formula>Coffee_Farmer_GAPs_Selection__r.CKW_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CKW Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CKW__c</fullName>
        <formula>Coffee_Farmer_GAPs_Selection__r.CKW_Contact__r.Contact_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CKW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coffee_Farmer_GAPs_Selection__c</fullName>
        <label>Coffee Farmer GAPs Selection</label>
        <referenceTo>Coffee_Farmer_GAPs_Selection__c</referenceTo>
        <relationshipLabel>Coffee GAPs Adoptions</relationshipLabel>
        <relationshipName>Coffee_GAPs_Adoptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coffee_Farmer__c</fullName>
        <formula>Coffee_Farmer_GAPs_Selection__r.Coffee_Farmer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coffee Farmer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coffee_Processing_Discussed__c</fullName>
        <label>GAP 9 Coffee Processing Discussed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coffee_Storage_Practices__c</fullName>
        <label>GAP 4.6 Coffee Storage Practices</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pack coffee in clean sacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stack bags on pallets or raised platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee stored away from other produce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not store coffee with Agro-chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store parchment &amp; Kiboko separately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Coffee_Storage_Practices_count__c</fullName>
        <formula>IF (INCLUDES(Coffee_Storage_Practices__c, &apos;Pack coffee in clean sacks&apos;), 1, 0) + 
IF (INCLUDES(Coffee_Storage_Practices__c, &apos;Stack bags on pallets or raised platform&apos;), 1, 0) +
IF (INCLUDES(Coffee_Storage_Practices__c, &apos;Coffee stored away from other produce&apos;), 1, 0) +
IF (INCLUDES(Coffee_Storage_Practices__c, &apos;Do not store coffee with Agro-chemicals&apos;), 1, 0) +
IF (INCLUDES(Coffee_Storage_Practices__c, &apos;Store parchment &amp; Kiboko separately&apos;), 1, 0) +
IF (INCLUDES(Coffee_Storage_Practices__c, &apos;NA&apos;), -1, 0) +
IF (INCLUDES(Coffee_Storage_Practices__c, &apos;None done&apos;), -1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 4.6 Coffee Storage Practices count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coffee_sorting_grading__c</fullName>
        <label>GAP 4.5 Coffee sorting/grading</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Remove broken black beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove stones/dirt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove waste or rubbish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not sort</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Coffee_sorting_grading_count__c</fullName>
        <formula>IF (INCLUDES(Coffee_sorting_grading__c, &apos;Remove broken black beans&apos;), 1, 0) +
IF (INCLUDES(Coffee_sorting_grading__c, &apos;Remove stones/dirt&apos;), 1, 0) +
IF (INCLUDES(Coffee_sorting_grading__c, &apos;Remove waste or rubbish&apos;), 1, 0) +
IF (INCLUDES(Coffee_sorting_grading__c, &apos;NA&apos;), -1, 0) +
IF (INCLUDES(Coffee_sorting_grading__c, &apos;Do not sort&apos;), -1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 4.5 Coffee sorting/grading count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desuckering_Full_Adoption__c</fullName>
        <formula>IF (!INCLUDES(Coffee_Farmer_GAPs_Selection__r.Top_5_Preferred_GAPs_for_Support__c ,&apos;Coffee desuckering, pruning and stumping&apos;), &apos;NA&apos;, 
IF (TEXT(Desuckering_Pruning_Stumping_Discussed__c) == &apos;No&apos;, &apos;Not Discussed&apos;, 
IF (TEXT(Frequency_of_Desuckering__c)==&apos;Several times/as soon as shoots come&apos;, &apos;Yes&apos;, &apos;No&apos;) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 2 Desuckering Full Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desuckering_Pruning_Stumping_Discussed__c</fullName>
        <label>Desuckering Pruning Stumping Discussed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Easy_Access_Agro_Inputs_Adoption__c</fullName>
        <formula>IF (!INCLUDES(Coffee_Farmer_GAPs_Selection__r.Top_5_Preferred_GAPs_for_Support__c, &apos;Easily access agro-inputs&apos;), &apos;NA&apos;, 
IF (TEXT(Easy_Access_Agro_Inputs_Discussed__c) == &apos;No&apos;, &apos;Not Discussed&apos;,
IF (	OR(TEXT(Obtain_Quality_Agro_Chemicals__c)==&apos;Buy from registered input dealers&apos;, 
TEXT(Obtain_Quality_Agro_Chemicals__c)==&apos;Collective purchase&apos;, 
TEXT(Obtain_Quality_Agro_Chemicals__c)==&apos;Seek for guidance from fellow farmers/CKW&apos;, 
TEXT(Obtain_Quality_Agro_Chemicals__c)==&apos;I call the GF farmer call center for guidance&apos; 
) 
, 
&apos;Yes&apos;, &apos;No&apos; 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 10 Easy Access Agro Inputs Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Easy_Access_Agro_Inputs_Discussed__c</fullName>
        <label>GAP 10 Easy Access Agro Inputs Discussed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_Herbicide_Application__c</fullName>
        <label>GAP 7.5 Frequency Herbicide Application</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_Pesticide_Application__c</fullName>
        <label>GAP 8.3 Frequency  Pesticide Application</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Desuckering__c</fullName>
        <label>GAP 2.1 Frequency of Desuckering</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Fertilizer_Use__c</fullName>
        <label>GAP 1.6 Frequency of Fertilizer Use</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Weeding__c</fullName>
        <label>GAP 7.2 Frequency of Weeding</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Once a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 times in a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GAP_3_Full_Adoption__c</fullName>
        <formula>IF (!INCLUDES(Coffee_Farmer_GAPs_Selection__r.Top_5_Preferred_GAPs_for_Support__c, &apos;Soil and water conservation&apos;), &apos;NA&apos;, 
IF (TEXT(Soil_Water_Conservation_Discussed__c) == &apos;No&apos;, &apos;Not Discussed&apos;,
IF ( OR(INCLUDES(Soil_and_Water_Conservation__c, &apos;Digging trenches or terraces&apos;), INCLUDES(Soil_and_Water_Conservation__c, &apos;Mulching&apos;)), &apos;Yes&apos;, &apos;No&apos;) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 3 Soil &amp; Water Conservation Adoption</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAP_6_Full_Adoption__c</fullName>
        <formula>IF (!INCLUDES(Coffee_Farmer_GAPs_Selection__r.Top_5_Preferred_GAPs_for_Support__c ,&apos;Group production and marketing of coffee&apos;), &apos;NA&apos;, 
IF (TEXT(Group_Production_Marketing_Discussed__c) == &apos;No&apos;, &apos;Not Discussed&apos;,
TEXT(Group_Production_and_Marketing__c) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 6 Group Production Marketng Adoption</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Group_Production_Marketing_Discussed__c</fullName>
        <label>GAP6 Group Production Marketng Discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Production_and_Marketing__c</fullName>
        <label>GAP 6.1 Group Production and Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Harvesting_PHH_Practices_count__c</fullName>
        <formula>IF (INCLUDES(Harvesting_and_PHH_Practices__c, &apos;Drying&apos;), 1, 0) + 
IF (INCLUDES(Harvesting_and_PHH_Practices__c, &apos;Sorting&apos;), 1, 0) + 
IF (INCLUDES(Harvesting_and_PHH_Practices__c, &apos;Cleaning&apos;), 1, 0) + 
IF (INCLUDES(Harvesting_and_PHH_Practices__c, &apos;Grading&apos;), 1, 0) + 
IF (INCLUDES(Harvesting_and_PHH_Practices__c, &apos;Packaging&apos;), 1, 0) + 
IF (INCLUDES(Harvesting_and_PHH_Practices__c, &apos;Branding&apos;), 1, 0) + 
IF (INCLUDES(Harvesting_and_PHH_Practices__c, &apos;Name and Price tagging&apos;), 1, 0) + 
IF (INCLUDES(Harvesting_and_PHH_Practices__c, &apos;Traceability&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 4.1 Harvesting &amp; PHH Practices count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Harvesting_and_PHH_Practices__c</fullName>
        <label>GAP 4.1 Harvesting and PHH Practices</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Drying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name and Price tagging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traceability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Kind_of_Records_Kept_Count__c</fullName>
        <formula>IF(INCLUDES(Kind_of_Records_Kept__c, &apos;Production records&apos;),1,0) + 
IF(INCLUDES(Kind_of_Records_Kept__c, &apos;Farm planning records&apos;),1,0) + 
IF(INCLUDES(Kind_of_Records_Kept__c, &apos;Sales records&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 5.2 Kind of Records Kept Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kind_of_Records_Kept__c</fullName>
        <label>GAP 5.2 Kind of Records Kept</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Production records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm planning records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Level_at_which_stumping_is_done__c</fullName>
        <label>GAP 2.7 Level at which stumping is done</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1ft above ground level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below the knee height</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-1½ft. above soil level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 ft. above ground level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Means_of_Soil_Fertilization__c</fullName>
        <label>GAP 1.1 Means of Soil Fertilization</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Manure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inorganic/chemical fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both manure and inorganic/chemical fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_of_Drying_Coffee__c</fullName>
        <label>GAP 4.4 Method of Drying Coffee</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cemented/concrete floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tarpaulins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bare ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised wire mesh/trays</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_of_Record_Storage__c</fullName>
        <label>GAP 5.3 Method of Record Storage</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Book/chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory/Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On paper sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_of_on_farm_processing__c</fullName>
        <label>GAP 4.2 Method of on-farm processing</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dry processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washed wet processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode_Fertilizer_Manure_Placement__c</fullName>
        <label>GAP 1.7 Mode Fertilizer/Manure Placement</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ring banding (Placed around the tree)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spot application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broad casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placed in trenches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Stems_per_Tree_after_Prune__c</fullName>
        <label>GAP 2.3 No of Stems per Tree after Prune</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4 stems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 4 stems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Obtain_Quality_Agro_Chemicals__c</fullName>
        <label>GAP 10.1 Obtain Quality Agro Chemicals</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Buy from registered input dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just buy from any input dealer (Do not mind where I Buy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collective purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seek for guidance from fellow farmers/CKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I call the GF farmer call center for guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not use any of these inputs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_farm_Value_Addition_Adoption__c</fullName>
        <formula>IF (!INCLUDES(Coffee_Farmer_GAPs_Selection__r.Top_5_Preferred_GAPs_for_Support__c,&apos;On farm coffee value addition (PHH)&apos;), &apos;NA&apos;, 
IF (TEXT(On_farm_Value_Addition_Discussed__c) == &apos;No&apos;, &apos;Not Discussed&apos;,
IF (	
OR(	
AND(!INCLUDES(Harvesting_and_PHH_Practices__c, &apos;NA&apos;), !INCLUDES(Harvesting_and_PHH_Practices__c, &apos;None done&apos;), Harvesting_PHH_Practices_count__c &gt;=3 
, TEXT(Method_of_on_farm_processing__c) == &apos;Dry processing&apos;, 
OR(TEXT(Method_of_Drying_Coffee__c) == &apos;Cemented/concrete floor&apos;, 
TEXT(Method_of_Drying_Coffee__c) == &apos;Tarpaulins&apos;, 
TEXT(Method_of_Drying_Coffee__c) == &apos;Raised wire mesh/trays&apos; 
), 
Coffee_sorting_grading_count__c &gt;= 2, 
Coffee_Storage_Practices_count__c &gt;= 2 
), 

AND(!INCLUDES(Harvesting_and_PHH_Practices__c, &apos;NA&apos;), !INCLUDES(Harvesting_and_PHH_Practices__c, &apos;None done&apos;), Harvesting_PHH_Practices_count__c &gt;=3 
, TEXT(Method_of_on_farm_processing__c) == &apos;Wet processing&apos;, 
AND(!INCLUDES(Steps_in_Wet_Processing__c, &apos;NA&apos;), !INCLUDES(Steps_in_Wet_Processing__c, &apos;Dry fermented coffee on bare ground&apos;) 
) 
, 
OR(TEXT(Method_of_Drying_Coffee__c) == &apos;Cemented/concrete floor&apos;, 
TEXT(Method_of_Drying_Coffee__c) == &apos;Tarpaulins&apos;, 
TEXT(Method_of_Drying_Coffee__c) == &apos;Raised wire mesh/trays&apos; 
) 
,	Coffee_sorting_grading_count__c &gt;= 2, Coffee_Storage_Practices_count__c &gt;= 2 
) 
) 
, 
&apos;Yes&apos; 
, 
&apos;No&apos; 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 4 On farm Value Addition Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_farm_Value_Addition_Discussed__c</fullName>
        <label>GAP 4 On farm Value Addition Discussed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pest_Disease_Control_Adoption__c</fullName>
        <formula>IF (!INCLUDES( Coffee_Farmer_GAPs_Selection__r.Top_5_Preferred_GAPs_for_Support__c ,&apos;Coffee pests and disease control&apos;),&apos;NA&apos;, 
IF (TEXT(Pest_Disease_Control_Discussed__c) == &apos;No&apos;, &apos;Not Discussed&apos;,
IF (	OR( 
AND(TEXT(Ability_to_Detect_Pest_Disease__c)==&apos;Yes&apos;, 
TEXT(Pest_and_Disease_Control_Measure__c)==&apos;Spray with chemicals (pesticides)&apos;, 
OR(TEXT(Frequency_Pesticide_Application__c)==&apos;Once&apos;, TEXT(Frequency_Pesticide_Application__c)==&apos;Twice&apos;) 
), 


AND(TEXT(Ability_to_Detect_Pest_Disease__c)==&apos;Yes&apos;, TEXT(Pest_and_Disease_Control_Measure__c)==&apos;Use local technology/cultural means&apos; 
), 

AND(TEXT(Ability_to_Detect_Pest_Disease__c)==&apos;Yes&apos;, TEXT(Pest_and_Disease_Control_Measure__c)==&apos;Use a combination of methods&apos; 
), 

AND(TEXT(Ability_to_Detect_Pest_Disease__c)==&apos;Yes&apos;, TEXT(Pest_and_Disease_Control_Measure__c)==&apos;Mechanical means (e.g. uprooting)&apos; 
) 
) 
, 
&apos;Yes&apos;, &apos;No&apos; 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 8 Pest &amp; Disease Control Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pest_Disease_Control_Discussed__c</fullName>
        <label>GAP 8 Pest &amp; Disease Control Discussed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pest_and_Disease_Control_Measure__c</fullName>
        <label>GAP 8.2 Pest and Disease Control Measure</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Spray with chemicals (pesticides)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use local technology/cultural means</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use a combination of methods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical means (e.g. uprooting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>